welcome.lessons.welcome.variables.Variables.scala.error
Variables:10: error: not found: value nbPas
while(nbPas != 0){
      ^Variables:12: error: not found: value nbPas
	nbPas = nbPas - 1
        ^